<resources>
    <string name="app_name">Bitaqwa</string>
    <string name="text_welcome">Assalamualaikum, Rizqi</string>
    <string name="text_name_pray">Subuh</string>
    <string name="text_location_pray">Mekkah, Arab Saudi</string>
    <string name="text_menu_doa">Doa Doa</string>
    <string name="text_menu_dzikir">Dzikir</string>
    <string name="text_menu_zakat">Zakat</string>
    <string name="text_menu_jadwal_sholat">Jadwal\nSholat</string>
    <string name="text_menu_video_kajian">Video\nKajian</string>
    <string name="text_inspirasi">Inspirasi</string>
    <string name="text_jumlah_rupiah">Jumlah Rupiah</string>
    <string name="text_ok">OK</string>
    <string name="text_pagi_malam"><![CDATA[Pagi & Malam]]></string>
    <string name="keluar_rumah">Keluar Rumah</string>
    <string name="makan_dan_minum"><![CDATA[Makan & Minum]]></string>
    <string name="text_perjalanan">Perjalanan</string>
    <string name="text_etika_baik">Etika Baik</string>
    <string name="text_sholat">Sholat</string>
    <string name="API_KEY">6c3337e4157abee71e8bdb4b4317e273</string>
    <string name="empt_city">Unknown City</string>
    <string name="text_total_harta">Total Harta</string>
    <string name="zakat_manual">Zakat Manual</string>
    <string name="info">Info</string>
</resources>